<resources>
    <string name="app_name">TeammateFinder</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_messages">Messages</string>
    <string name="navigation_friends">Friends</string>
    <string name="navigation_settings">Settings</string>
    <string name="nav_menu_text">Navigation Menu</string>
    <string name="game_name">League of Legends</string>
    <string name="url">https://</string>
    <string name="profile_Rank">Placeholder Rank</string>
    <string name="profile_header">Profile Header Placeholder</string>
    <string name="profile_rank_image">Rank Image Placeholder</string>
    <string name="profile_winrate">Winrate Placeholder</string>
    <string name="profile_server">Server Placeholder</string>
    <string name="settings_header">Settings</string>
    <string name="save_button">Save</string>
    <string name="card_tag">Card Tag</string>
    <string name="card_server">Card Server</string>
    <string name="card_winrate">Card Winrate</string>
    <string name="add_button">+</string>
    <string-array name="game_selection">
        <item>League of Legends</item>
        <item>Valorant</item>
        <item>TFT</item>
    </string-array>
    <string-array name="servers">
        <item>NA</item>
        <item>EUW</item>
        <item>EUNE</item>
        <item>LAN</item>
        <item>LAS</item>
        <item>BR</item>
        <item>TR</item>
        <item>RU</item>
        <item>OCE</item>
        <item>JP</item>
        <item>KR</item>
        <item>PH</item>
        <item>SG</item>
        <item>TH</item>
        <item>TW</item>
        <item>VN</item>
    </string-array>
</resources>