<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_backgroud"
    tools:context=".ui.Profile">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_text"
        android:textSize="60sp"
        android:text="@string/profile_header"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/white"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/match_history_profile"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:fitsSystemWindows="true"
            android:nestedScrollingEnabled="true"
            android:clipToPadding="true"
            android:verticalScrollbarPosition="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_rank"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:text="@string/profile_Rank"
                />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_rank_image"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:id="@+id/profile_image_rank"
                android:src="@drawable/unranked_lol"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_margin="16dp"
                    android:id="@+id/winrate_profile"
                    android:text="@string/profile_winrate"
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_margin="16dp"
                    android:padding="16dp"
                    android:text="@string/profile_server"
                    android:id="@+id/profile_server"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
            </LinearLayout>

       </LinearLayout>
    </ScrollView>
</LinearLayout>