<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    app:cardBackgroundColor="@color/black"
    android:layout_margin="5dp"
    app:cardCornerRadius="12dp"
    android:elevation="3dp"
    app:contentPadding="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_tag"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/cardTag"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:importantForAccessibility="no"
            android:src="@drawable/unranked_lol"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:id="@+id/cardImage"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_server"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/cardServer"
            android:layout_marginStart="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_winrate"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/cardWinrate"
            android:layout_marginStart="16dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>